tests/spec/emit/snapshots/method_with_reference_self.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Counter { count: int }
  
  impl Counter {
    fn get_count(self: Ref<Counter>) -> int {
      self.count
    }
  }
---
package main

type Counter struct {
	count int
}

func (c *Counter) getCount() int {
	return c.count
}
