tests/spec/emit/snapshots/min_int64.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> int {
    -9223372036854775808
  }
---
package main

func test() int {
	return -9223372036854775808
}
