tests/spec/emit/snapshots/mixed_lowering_and_bare_methods_satisfy_go_interface.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:example.com/mixed"
  
  struct Svc {}
  
  impl Svc {
    fn Load(self, key: string) -> Result<int, error> {
      Ok(1)
    }
    fn Name(self) -> string {
      "svc"
    }
  }
  
  fn run(s: mixed.Service) -> string {
    s.Name()
  }
  
  fn main() {
    let s = Svc {}
    let _ = run(s as mixed.Service)
  }
---
package main

import "example.com/mixed"

type Svc struct{}

func (s Svc) Load(_ string) (int, error) {
	return 1, nil
}

func (s Svc) Name() string {
	return "svc"
}

func run(s mixed.Service) string {
	return s.Name()
}

func main() {
	s := Svc{}
	run(s)
}
