tests/spec/emit/snapshots/multi_impl_generic_method_only_type_arg.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Pair<A, B> { a: A, b: B }
  
  impl<A, B> Pair<A, B> {
    fn snd<U>(self, u: U) -> U { u }
  }
  
  fn test() -> bool {
    let p: Pair<int, string> = Pair { a: 1, b: "x" };
    p.snd<bool>(true)
  }
---
package main

type Pair[A any, B any] struct {
	a A
	b B
}

func Pair_snd[A any, B any, U any](_ Pair[A, B], u U) U {
	return u
}

func test() bool {
	p := Pair[int, string]{
		a: 1,
		b: "x",
	}
	return Pair_snd[int, string, bool](p, true)
}
