tests/spec/emit/snapshots/multiple_methods.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Point { x: int, y: int }
  
  impl Point {
    fn new(x: int, y: int) -> Point {
      Point { x: x, y: y }
    }
  
    fn get_x(self: Point) -> int {
      self.x
    }
  }
---
package main

type Point struct {
	x int
	y int
}

func Point_new(x, y int) Point {
	return Point{
		x: x,
		y: y,
	}
}

func (p Point) getX() int {
	return p.x
}
