tests/spec/emit/snapshots/multiple_option_constructions.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test(flag: bool) -> Option<int> {
    if flag {
      Some(42)
    } else {
      None
    }
  }
---
package main

func test(flag bool) (int, bool) {
	if flag {
		return 42, true
	}
	return 0, false
}
