tests/spec/emit/snapshots/multiple_result_constructions.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: "input: \nfn test(flag: bool) -> Result<int, string> {\n  if flag {\n    Ok(42)\n  } else {\n    Err(\"error\")\n  }\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(flag bool) lisette.Result[int, string] {
	var tmp_1 lisette.Result[int, string]
	if flag {
		tmp_1 = lisette.MakeResultOk[int, string](42)
	} else {
		tmp_1 = lisette.MakeResultErr[int, string]("error")
	}
	return tmp_1
}
