tests/spec/emit/snapshots/multiple_return_points.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(x: int) -> int {
    if x < 0 {
      return 0;
    }
    if x > 100 {
      return 100;
    }
    x
  }
---
package main

func test(x int) int {
	if x < 0 {
		return 0
	}
	if x > 100 {
		return 100
	}
	return x
}
