tests/spec/emit/snapshots/multiple_shadows_in_block.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn test() -> int {
    let x = 5
    {
      let x = x * 2
      let x = x + 100
      x
    }
  }
---
package main

func test() int {
	x := 5
	var tmp int
	{
		x := x * 2
		x_1 := x + 100
		tmp = x_1
	}
	return tmp
}
