tests/spec/emit/snapshots/mutable_interface_var_uses_var_declaration.snap
---
source: tests/spec/emit/types.rs
description: |
  
  pub interface Printable {
    fn to_string(self) -> string
  }
  
  struct Box { label: string }
  impl Box {
    pub fn to_string(self) -> string { self.label }
  }
  
  fn test() {
    let p: Printable = Box { label: "hello" }
  }
---
package main

type Printable interface {
	ToString() string
}

type Box struct {
	label string
}

func (b Box) ToString() string {
	return b.label
}

func test() {
	_ = Box{label: "hello"}
}
